modules/gdscript/tests/scripts/analyzer/errors/array_destructuring_with_an_invalid_initializer_type.gd
func test():
    var a: int
    var b: int
    var [a, b] = 42
